correction de l' affichage des dialog sur les places de parking